<resources>
        <string name="app_name">Banco App</string>

        <!-- Login -->
        <string name="titulo_login">Inicio de Sesión</string>
        <string name="usuario">Usuario</string>
        <string name="contrasena">Contraseña</string>
        <string name="btn_ingresar">Ingresar</string>
        <string name="error_usuario">Por favor, ingresa tu usuario</string>
        <string name="error_contrasena">Por favor, ingresa tu contraseña</string>
        <string name="error_credenciales">Usuario o contraseña incorrectos</string>

        <!-- Cuenta Banco -->
        <string name="titulo_banco">Cuenta de Banco</string>
        <string name="titulo_usuario">Titulo Usuario</string>
        <string name="nombre_empresa">Nombre de la empresa</string>
        <string name="domicilio">Domicilio</string>
        <string name="numero_cuenta">Número de cuenta</string>
        <string name="cliente">Nombre del Cliente</string>
        <string name="nombre_cliente">Nombre Cliente</string>
        <string name="banco">Banco</string>
        <string name="saldo">Saldo</string>
        <string name="nuevo_saldo">Nuevo Saldo</string>
        <string name="cantidad">Cantidad</string>
        <string name="movimientos">Movimiento</string>
        <string name="deposito">Depósito</string>
        <string name="retiro">Retiro</string>
        <string name="consultar_saldo">Consulta</string>
        <string name="registrar">Registrar Cuenta</string>
        <string name="aplicar">Aplicar Movimiento</string>
        <string name="btn_registrar">Boton Registrar</string>
        <string name="btn_aplicar">Boton Aplicar</string>


        <!-- Errores -->
        <string name="error_datos_cuenta">Debes llenar todos los datos de la cuenta</string>
        <string name="error_movimiento">Selecciona un movimiento y una cantidad válida</string>
        <string name="error_sin_saldo">Saldo insuficiente para el retiro</string>
</resources>
